# qaengine-appium

./: CMakeLists.txt  qt_qa_engine.pro
cmake/: qt_qa_engineConfig.cmake.in
